--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,7 +1,7 @@
 @import './theme.scss';
+@import "~material-components-web/material-components-web";
 
 body {
-  color: $mdc-theme-primary;
   background-color: $mdc-theme-background;
 }
 
