--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         <link rel="shortcut icon" href="{{url_for('static', filename='favicon.png')}}" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#ff9800" />
-        <link rel='stylesheet' href="{{url_for('static', filename='dist/bundle.css')}}"
+        <link rel="stylesheet" href="{{url_for('static', filename='dist/bundle.css')}}"
         <!--
         manifest.json provides metadata used when your web app is installed on a
         user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -17,7 +17,7 @@
         <noscript>You need to enable JavaScript to run this app.</noscript>
 
         <div id="app"></div>
-        <script src="{{url_for('static', filename='dist/bundle.js')}}"></script>
+        <script src="{{url_for('static', filename='dist/bundle.js')}}" async></script>
         <!-- <script src="/socket.io/socket.io.js"></script> -->
     </body>
 </html>
